fixed css for .PhotoCropper .button

--- a/component/PhotoCropper.styl
+++ b/component/PhotoCropper.styl
@@ -3,9 +3,9 @@
 
     .button
       position relative
-      width 100%
       text-align center
       cursor pointer
+      overflow hidden
 
       input[type=file]
         position absolute
